# AgentMarkWeb

./: .env.example  .gitignore  README.md  README_zh.md  check_key.py  environment.yml  pyproject.toml  report.md  requirements.txt  verify_add_agent.py
agentmark-proxy/: main.py  proxy_utils.py  test_litellm.py  verify_proxy.py
agentmark/core/: __init__.py  agent_simulator.py  coding_utils.py  experiment_logger.py  local_llm.py  log_parser.py  parser_utils.py  prompt_utils.py  react_logger.py  rlnc_codec.py  visualization.py  watermark_sampler.py
agentmark/environments/alfworld/: __init__.py  action_executor.py  adapter.py  agent.py  logger.py  prompt.py
agentmark/environments/toolbench/: __init__.py  adapter.py  data_loader.py  fake_response.py  output.py  prompt.py
agentmark/proxy/: server.py
agentmark/sdk/: __init__.py  prompt_adapter.py  watermarker.py
dashboard/: .gitignore  check_db.py  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/.git_backup/: COMMIT_EDITMSG  config  index
dashboard/server/: app.py  app.py.bak  database.py  retriever.py  shared.py  test_retrieval.py
dashboard/src/: App.tsx  index.css
dashboard/src/data/: 1301.json  (+9 more)
experiments/rlnc_trajectory/: rlnc_eval_config.json  rlnc_fpr_config.json
swarm/: .gitignore
swarm/swarm.egg-info/: SOURCES.txt
tests/: batch_consistency.py  fake_agent_llm.py  smoke_sdk.py
项目文档/: 02_总体方案设计.md  fig_2_2_architecture.tex  fig_2_2_extension_components.tex  fig_2_3_extraction_flow.tex  fig_2_3_injection_flow.tex  fig_2_3_state_machine.tex  启动指南.md  水印SDK使用说明.md
(+112 files in other folders)
